overflow fix in mobile device

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 .Header{
     text-align: center;
@@ -22,13 +23,17 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
+    width: 300px;
 }
 .form-input{
-    min-width: 50px;
+    width: 60%;
 }
 .main-card{
-    min-width: 400px;
+    min-width: 300px;
     margin-bottom: 8px;
     display: flex;
     justify-content: space-between;
+}
+.Alert{
+    width: 275px;
 }
